Fixed scroll alignment

--- a/src/styles/NoteList.css
+++ b/src/styles/NoteList.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 90vh;
@@ -14,5 +14,4 @@
   align-items: center;
   width: 80%;
   overflow-y: auto;
-  flex-grow: 0;
 }
